@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>GXemul: Machines: XMACHINEX</title>
+  <meta name="robots" content="noarchive,nofollow,noindex">
+</head>
+<body>
+
+<!-- 10 lines header.  -->
+
+<h1>GXemul: Machines: <tt>XMACHINEX</tt></h1>
+<hr><p>
+
+<a href="../">Back to the index.</a>
+<p><a href="../machines.html">Back to the machine index.</a>
+
+
+<h2><tt>XMACHINEX</tt> machine</h2>
+
