@@ -18,6 +18,13 @@
 
 <h2><tt>testmips</tt> machine</h2>
 
+<!-- This file is AUTOMATICALLY GENERATED! Do not edit. -->
+<pre>  (unnamed machine)  [testmips]
+  \-- mainbus0
+      |-- ram0  (32 MB at offset 0)
+      |-- rom0  (16 MB at offset 0x1fc00000)
+      \-- <a href="../components/component_mips_cpu.html">cpu0</a>  (MIPS, 100 MHz)
+</pre>
 The <tt>testmips</tt> machine is a generic test machine with a
 <a href="../components/component_mips_cpu.html">MIPS CPU</a>.
 
